[gd_scene load_steps=6 format=3 uid="uid://kfs0egtbxrh2"]

[ext_resource type="Script" path="res://ui_assistance/window.gd" id="1_ilxod"]
[ext_resource type="Texture2D" uid="uid://cbo3ol6bog3x2" path="res://assets/computer/window_surroundings.png" id="2_kv0r7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crl3r"]
size = Vector2(946, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5eyla"]
size = Vector2(946, 580)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23csb"]
size = Vector2(33, 549.5)

[node name="Window" type="CharacterBody2D"]
position = Vector2(-3, -4)
collision_layer = 0
script = ExtResource("1_ilxod")

[node name="WINDOW" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(702, 296)
texture = ExtResource("2_kv0r7")

[node name="windowBar" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="barShape" type="CollisionShape2D" parent="windowBar"]
position = Vector2(685, 21)
shape = SubResource("RectangleShape2D_crl3r")

[node name="hitbox" type="CollisionPolygon2D" parent="."]
position = Vector2(702, 296)
polygon = PackedVector2Array(-490, 290, -490, -290, 490, -290, 490, 290)

[node name="close" type="Button" parent="."]
offset_left = 1159.0
offset_top = 7.0
offset_right = 1191.0
offset_bottom = 35.0
flat = true

[node name="clicked_in" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="clicked_in"]
position = Vector2(685, 295)
shape = SubResource("RectangleShape2D_5eyla")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="clicked_in"]
position = Vector2(1175, 311)
shape = SubResource("RectangleShape2D_23csb")

[connection signal="mouse_entered" from="windowBar" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="windowBar" to="." method="mouse_exited"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="area_entered" from="clicked_in" to="." method="_on_clicked_in_area_entered"]
[connection signal="area_exited" from="clicked_in" to="." method="_on_clicked_in_area_exited"]
[connection signal="input_event" from="clicked_in" to="." method="_on_clicked_in_input_event"]
